--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,5 @@
 {
- "extends": ["eslint:recommended", "plugin:react/recommended", "airbnb-base"],
+ "extends": ["eslint:recommended", "plugin:react/recommended", "airbnb-base", "plugin:react-hooks/recommended"],
  "env": {
         "browser": true,
         "node": true,
@@ -14,7 +14,9 @@
    "class-methods-use-this": "off",
    "react/jsx-uses-react": "error",
     "react/jsx-uses-vars": "error",
-    "no-console": "off"
+    "react-hooks/rules-of-hooks": "error",
+    "react-hooks/exhaustive-deps": "warn",
+    "no-console": "warn"
  },
  "parser": "babel-eslint",
  "parserOptions": {
