--- a/.eslintrc
+++ b/.eslintrc
@@ -16,7 +16,8 @@
     "react/jsx-uses-vars": "error",
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
-    "no-console": "warn"
+    "no-console": "warn",
+    "linebreak-style": "off"
  },
  "parser": "babel-eslint",
  "parserOptions": {
