--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "movies-explorer-frontend",
   "version": "1.0.0",
-  "homepage": ".",
+  "homepage": "https://interind.github.io/movies-explorer-frontend",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
